<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UserNew">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle"
            android:text="@string/user_new_subtitle"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle"
            android:textSize="@dimen/input_text_size"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:hint="@string/input_user_placeholder"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_input"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size"
            android:layout_marginVertical="10dp"
            android:hint="@string/input_password_placeholder"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size"
            android:layout_marginVertical="10dp"
            android:hint="@string/input_confirm_password_placeholder"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/create_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_new_button"
            android:layout_below="@+id/confirm_password_input"
            android:layout_centerHorizontal="true"
            android:background="@color/colorDarkPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/input_text_size"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>